--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,47 +2,28 @@
     <h1>Chania</h1>
 </div>
 
-<!-- <div class="row">
-    <div class="col-3 col-s-3 menu">
-        <ul>
-            <li>The Flight</li>
-            <li>The City</li>
-            <li>The Island</li>
-            <li>The Food</li>
-        </ul>
-    </div>
-
-    <div class="col-6 col-s-9">
-        <h1>The City</h1>
-        <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the
-            old town and the modern city.</p>
-    </div>
-
-    <div class="col-3 col-s-12">
-        <div class="aside">
-            <h2>What?</h2>
-            <p>Chania is a city on the island of Crete.</p>
-            <h2>Where?</h2>
-            <p>Crete is a Greek island in the Mediterranean Sea.</p>
-            <h2>How?</h2>
-            <p>You can reach Chania airport from all over Europe.</p>
-        </div>
-    </div>
-</div> -->
+<div class="dog-book">
+    <span style="font-size: 30px;"><i>Nie wieder unser Angebot verpassen !</i></span><br>
+    <span>jetzt für den Newsletter anmelden 5% Gutschein Sichern!</span><br><br>
+    <mat-form-field class="example-full-width">
+        <mat-label>Favorite food</mat-label>
+        <input matInput placeholder="Ex. Pizza" value="Sushi">
+    </mat-form-field>
+</div>
 
 <div class="footer">
-    <div class="footer1 col-12">
+    <div class="footer1">
         <p>Haben Sie Fragen zu einer Bestellung ?</p>
         <p>Unser Kundenservice kann Ihnen weiterhelfen !</p>
-        <div class="innenBox">Kontakt</div>
+        <button class="footer-button" mat-stroked-button>Kontakt</button>
     </div>
-    <div class="footer2 col-12">
-        <div class="zahlung col-4 col-s-4">
+    <div class="footer2">
+        <div class="zahlung col-4 col-xs-2  footer2-float">
             <p class="zahlung-label">Sicher zahlen</p>
             <div class="Zb">
-                <div class="zahlungBox">Bankeinzug</div>
-                <div class="zahlungBox">Vorkasse</div>
-                <div class="zahlungBox">Rechnung</div>
+                <button class="zahlung-button" mat-stroked-button>Bankeinzug</button>
+                <button class="zahlung-button" mat-stroked-button>Vorkasse</button>
+                <button class="zahlung-button" mat-stroked-button>Rechnung</button>
             </div>
             <div class="Zb">
                 <img class="imgBox" src="assets/logos/paypal.png">
@@ -51,21 +32,21 @@
                 <img class="imgBox" src="assets/logos/mastercard.png">
             </div>
         </div>
-        <div class="vl"></div>
-        <div class="versand col-4 col-s-4">
+        <!-- <div class="vl"></div> -->
+        <div class="versand-label col-4 col-xs-2  footer2-float">
             <p>Schnell versendet</p>
             <img class="imgBox" src="assets/logos/dhl.png">
             <p>Portofrei ab 29 EUR</p>
         </div>
-        <div class="vl"></div>
-        <div class="partner col-4 col-s-4">
+        <!-- <div class="vl"></div> -->
+        <div class="partner-label col-4 col-xs-2  footer2-float">
             <p>Partner von</p>
             <img class="imgBox" src="assets/logos/billiger.png">
             <img class="imgBox" src="assets/logos/idealo.png">
         </div>
     </div>
 
-    <div class="clearfix" style="background-color: grey;">
+    <div class="footer3" style="background-color: grey;">
         <div class="col-3 col-xs-1 footer3-float">
             <h4 class="bottom-div">RECHTE & FRISTEN</h4>
             <p>Sitemap</p>
@@ -99,39 +80,4 @@
             <p>Schweiz</p>
         </div>
     </div>
-
-    <!-- <div class="footer3">
-        <div class="col-3 col-xs-1 footer3-float" >
-            <p class="bottom-div">RECHTE & FRISTEN</p>
-            <p>Sitemap</p>
-            <p>Impressum</p>
-            <p>Datenschutzerklärung</p>
-            <p>Widerrufsrecht</p>
-            <p>Marktplatz.wdt.de, www.wdt.de</p>
-        </div>
-        <div class="col-3 col-xs-1 footer3-float">
-            <p class="bottom-div">HILFE & SERVICE</p>
-            <p>FAQ</p>
-            <p>Suchen</p>
-            <p>Blog</p>
-            <p>Abobestellungen</p>
-            <p>AGB</p>
-            <p>Kontakt</p>
-        </div>
-        <div class="col-3 col-xs-1 footer3-float">
-            <p class="bottom-div">MEIN KONTO</p>
-            <p>Sitemap</p>
-            <p>Impressum</p>
-            <p>Datenschutzerklärung</p>
-            <p>Widerrufsrecht</p>
-            <p>Marktplatz.wdt.de, www.wdt.de</p>
-        </div>
-        <div class="col-3 col-xs-1 footer3-float">
-            <p class="bottom-div">LIEFER- UND VERSANDKOSTEN</p>
-            <p>Deutschland</p>
-            <p>Österreich</p>
-            <p>Europa</p>
-            <p>Schweiz</p>
-        </div>    
-    </div> -->
 </div>
