--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -63,28 +63,34 @@
       margin-bottom: 30px;
       text-align: center;
   }
-  .footer2{
-      display: flex;
+  .footer2::after{
       color: grey;
       font-size: 12px;
-      margin-top: 30px;
-      margin-bottom: 30px;
+    //   margin-top: 30px;
+    //   margin-bottom: 30px;
+      content: "";
+    clear: both;
+    display: table;
   }
-  .zahlung-label{
-      margin-left: 200px;
+  .footer2-float{
+    float: left;
+    color: grey;
+    font-size: 12px;
+  }
+  .zahlung {
+    //   margin-left: 200px;
+    text-align: center;
+  }
+  .versand-label{
+      text-align: center;
+  }
+  .partner-label{
+      text-align: center;
   }
   .Zb{display: flex;
-      margin-left: 150px;
+    //   margin-left: 150px;
     }
-  .zahlungBox{
-    height: 20px; 
-    width: 70px; 
-    border: solid grey 1px;
-    border-radius: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 10px;
-  }
+  
   .vl{
     border-left: 1px solid grey;
     height: 150px;
@@ -105,12 +111,21 @@
   .bottom-div{
       margin-bottom: 30px;
   }
-  .innenBox{
-      height: 30px;
-      width: 200px;
-      border: solid white 2px;
-      padding: 3px;
-      margin: auto;
+  .footer-button{
+    width: 200px;
+    border: solid white 2px;
+    color: #ffffff;
+    background-color: lightgrey;
+    font-size: 14px;
+  }
+  .zahlung-button{
+    border: solid grey 1px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    color: grey;
+    font-size: 10px;
+    height: 20px; 
+    width: 90px;
   }
   .footer3-float{
       float: left;
@@ -118,13 +133,8 @@
       font-size: 10px;
     //   padding: 50px;
   }
-
-  .boxe {
-    // float: left;
-    // width: 33.33%;
-  }
   
-  .clearfix::after {
+  .footer3::after {
     content: "";
     clear: both;
     display: table;
@@ -170,4 +180,10 @@
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+    .dog-book{
+        background-color: lightgrey;
+        margin-bottom: 90px;
+        margin-top: 90px;
+        color: grey;
+    }
   }
