--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,19 @@
-<div class="header">
-    <h1>Chania</h1>
-</div>
 
-<div class="dog-book">
-    <span style="font-size: 30px;"><i>Nie wieder unser Angebot verpassen !</i></span><br>
-    <span>jetzt für den Newsletter anmelden 5% Gutschein Sichern!</span><br><br>
-    <mat-form-field class="example-full-width">
-        <mat-label>Favorite food</mat-label>
-        <input matInput placeholder="Ex. Pizza" value="Sushi">
-    </mat-form-field>
+
+
+
+<div class="dog-book" style="display: flex;">
+    <div class="dog-img col-6 col-s-6" style="z-index: 1; margin-bottom: 20px;">
+        <img src="assets/logos/dog-book.png" style="width: 500px; height:300px;">
+    </div>
+    <div class="col-6 col-s-6" style="margin-top: 30px;">
+        <span style="font-size: 30px;"><i>Nie wieder unser Angebot verpassen !</i></span><br>
+        <span>jetzt für den Newsletter anmelden 5% Gutschein Sichern!</span><br><br>
+        <mat-form-field class="example-full-width">
+            <input matInput placeholder="Email Adresse">
+        </mat-form-field><br>
+        <button mat-raised-button color="warn">50% Gutschein >></button>
+    </div>
 </div>
 
 <div class="footer">
