--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,187 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <div style="text-align:center"> -->
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+
+<div style="display: flex">
+  <img src="assets/logos/Tierarzt_Logo.png" style="margin-right: 50px" class="col-3">
+  <mat-form-field class="example-full-width" class="col-6">
+    <input matInput placeholder="PRODUKT SUCHE ...">
+  </mat-form-field>
+  <div class="col-3"  style="margin-top: 30px">
+    <span>Mein Konto</span>
+    <a href="#"><i class="fa fa-user" style="font-size:26px; color: lightgrey; margin-right: 10px"></i></a>
+    <a href="#"><i class="fa fa-heart" style="font-size:26px; color: lightgrey; margin-right: 10px"></i></a>
+    <a href="#"><i class="fa fa-shopping-cart" style="font-size:26px; color: red; margin-right: 10px"></i></a>
+  </div>
+</div>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 30px">
+  <a href="#"><i class="fa fa-bars" style="font-size:26px; color: grey; margin-right: 10px"></i></a>
+  <a class="navbar-brand" href="#">Alle Kategorien</a>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#">HUND <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">KATZE</a>
+      <a class="nav-item nav-link" href="#">PFERD</a>
+      <a class="nav-item nav-link " href="#">NEU</a>
+      <a class="nav-item nav-link " href="#">SALE</a>
+      <a class="nav-item nav-link " href="#">MARKEN</a>
+      <a class="nav-item nav-link " href="#">EINGENMARKEN</a>
+      <a class="nav-item nav-link " href="#">MAGAZIN</a>
+    </div>
+  </div>
+</nav>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" style="margin-bottom: 40px">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="assets/logos/horse.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/logos/horse.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/logos/horse.png" alt="Third slide">
+    </div>
+  </div>
+</div>
+
+<div style="margin-bottom: 30px"><img src="assets/logos/leiste.png" style="width: 100%; 
+  object-fit: contain"></div>
+
+<div class="animal-img-div">
+  <img class="animal-img col-3" src="assets/logos/cat1.png">
+  <img class="animal-img col-3" src="assets/logos/dog1.png">
+  <img class="animal-img col-3" src="assets/logos/snake1.png">
+  <img class="animal-img col-3" src="assets/logos/cat2.png">
+</div>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" style="text-align: center; margin-bottom: 90px">
+    <div class="carousel-item active">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+      <img src="assets/logos/royal-canin.png" class="royal-canin-img" alt="...">
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <div>
+    <img class="woman-kiss-dog" src="assets/logos/woman-kiss-dog.png">
+  </div>
+
+  <div style="text-align: center; margin-top: 20px; margin-bottom: 70px;">
+    <button class="twin-button1" mat-stroked-button>Tierarzt in der Nähe</button>
+    <button class="twin-button2" mat-raised-button>Kostenlose Beratung</button>
+  </div>
+
+  <!-- <div class="carousel-inner" style="text-align: center; margin-bottom: 90px">
+      <div class="carousel-item active">
+        <img src="assets/logos/wdt.png" class="partner-img" alt="...">
+        <img src="assets/logos/vetoquinol.png" class="partner-img" alt="...">
+        <img src="assets/logos/tierarzt.png" class="partner-img" alt="...">
+        <img src="assets/logos/nutrilab.png" class="partner-img" alt="...">
+      </div>
+      <div class="carousel-item">
+          <img src="assets/logos/wdt.png" class="partner-img" alt="...">
+          <img src="assets/logos/vetoquinol.png" class="partner-img" alt="...">
+          <img src="assets/logos/tierarzt.png" class="partner-img" alt="...">
+          <img src="assets/logos/nutrilab.png" class="partner-img" alt="...">
+      </div>
+      <div class="carousel-item">
+          <img src="assets/logos/wdt.png" class="partner-img" alt="...">
+          <img src="assets/logos/vetoquinol.png" class="partner-img" alt="...">
+          <img src="assets/logos/tierarzt.png" class="partner-img" alt="...">
+          <img src="assets/logos/nutrilab.png" class="partner-img" alt="...">
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div> -->
+
+  <div class="container text-center my-3">
+    <h3 style="color: grey"><u>Top Marken</u></h3>
+    <div id="recipeCarousel" class="carousel slide w-100" data-ride="carousel">
+      <div class="carousel-inner w-100" role="listbox">
+        <div class="carousel-item row no-gutters active">
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/wdt.png" alt="..."
+              style="width: 100px; height: 100px; margin-left: 50px"></div>
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/vetoquinol.png" alt="..."
+              style="width: 100px; height: 100px;"></div>
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/tierarzt.png" alt="..."
+              style="width: 100px; height: 100px;"></div>
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/nutrilab.png" alt="..."
+              style="width: 100px; height: 100px; margin-right: 50px"></div>
+        </div>
+        <div class="carousel-item row no-gutters">
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/wdt.png" alt="..."
+              style="width: 100px; height: 100px; margin-left: 50px"></div>
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/vetoquinol.png" alt="..."
+              style="width: 100px; height: 100px;"></div>
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/tierarzt.png" alt="..."
+              style="width: 100px; height: 100px;"></div>
+          <div class="col-3 float-left"><img class="img-fluid" src="assets/logos/nutrilab.png" alt="..."
+              style="width: 100px; height: 100px; margin-right: 50px"></div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#recipeCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#recipeCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+  </div>
+
+  <div class="div0">
+    <div class="one"></div>
+    <img class="two" src="assets/logos/dog-woman.png">
+    <div class="three" style="text-align: center">
+      <img src="assets/logos/Tierarzt_Logo.png" style="display: block; margin-left: auto; margin-right: auto;">
+      <p style="margin-top: 60px;"><b>Der Onlineshop für das Wohlergehen Ihres Tieres</b></p>
+      <p style="color: grey">wir vefügen über ein umfangreiches Sortiment an Diät- und Ergänzungsfuttermitteln für
+        Hunde,
+        Katzen an top
+        Marken wie Royal Camin, Hill's, Boehringer, Ingelheim, Equistro, NutiLabs uvm. an
+      </p>
+      <button class="footer-button" mat-stroked-button>...Erfahren Sie mehr!</button>
+    </div>
+  </div>
+
+  <!-- <div class="div2"> -->
+  <!-- <img class="div2" src="assets/logos/dog-woman.png"> -->
+  <!-- </div> -->
+  <!-- <div class="div3"></div> -->
 
   <app-footer></app-footer>
-
-  <!-- <div class="clearfix" >
-      <div class="box" >
-      <p>Some text inside the box.</p>
-      </div>
-      <div class="box" >
-      <p>Some text inside the box.</p>
-      </div>
-      <div class="box" >
-      <p>Some text inside the box.</p>
-      </div>
-    </div> -->
-
-  <!-- <div class="col-3 col-s-3 menu">
-    <ul>
-      <li>The Flight</li>
-      <li>The City</li>
-      <li>The Island</li>
-      <li>The Food</li>
-    </ul>
-  </div>
-
-  <div class="col-6 col-s-9">
-    <h1>The City</h1>
-    <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old
-      town and the modern city.</p>
-  </div>
-
-  <div class="col-3 col-s-12">
-    <div class="aside">
-      <h2>What?</h2>
-      <p>Chania is a city on the island of Crete.</p>
-      <h2>Where?</h2>
-      <p>Crete is a Greek island in the Mediterranean Sea.</p>
-      <h2>How?</h2>
-      <p>You can reach Chania airport from all over Europe.</p>
-    </div> -->
-<!-- </div> -->
