--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,44 @@
 
+.div0{
+    // width: 100%;
+    height: 500px;
+    // border: solid 1px black;
+}
+
+
+.div1{
+    // position: relative;
+    top: 20px;
+    left: 50px;
+    width: 500px; 
+    height: 300px; 
+    border: solid 1px grey;
+    z-index: -1;
+}
+.div2{
+    position: relative;
+    z-index: 1;
+    width: 600px;
+    height: 300px;
+    // right: 0px;
+    top: 10px;
+}
+.div3{
+    background-color: lightgrey;
+    width: 400px;
+    height: 400px;
+}
+.caroussel-img{
+    width: 100px;
+    height: 100px;
+}
+.footer-button{
+    width: 200px;
+    border: solid darkgrey 2px;
+    color: #ffffff;
+    background-color: lightgrey;
+    font-size: 14px;
+  }
 
 /* For mobile phones: */
 [class*="col-"] {
@@ -42,15 +82,83 @@
     box-sizing: border-box;
   }
   
-//   .box {
-//     float: left;
-//     width: 33.33%;
-//   }
-  
-//   .clearfix::after {
-//     content: "";
-//     clear: both;
-//     display: table;
-//     background-color: grey;
+  .one {
+    width: 50%;
+    height: 300px;
+    // padding: 50px;
+    // box-sizing: border-box;
+    position: absolute;
+    z-index: 1;
+    border: solid 1px grey;
+    // margin: 50px 0px 0px 30px 
+    left: 100px;
+    margin-top: 110px;
 
-//   }
+    }
+    
+    .two{
+    // background: #dfdfdf;
+    width: 50%;
+    height: 300px;
+    padding: 10px;
+    // box-sizing: border-box;
+    position: absolute;
+    z-index: 2;
+    // margin: 75px 0 0 325px;
+    right: 0px;
+    margin-top: 150px;
+    }
+    
+    .three {
+    background: #dfdfdf;
+    width: 30%;
+    height: 350px;
+    padding: 10px;
+    // box-sizing: border-box;
+    position: absolute;
+    z-index: 3;
+    // margin: 0px 0 0 250px;
+    left: 400px;
+    }
+
+    .carousel-control-next-icon{
+        background-color: grey;
+        width: 30px;
+        height: 60px;
+    }
+    .carousel-control-prev-icon{
+        background-color: grey;
+        width: 30px;
+        height: 60px;
+    }
+    .twin-button1{
+        width: 200px;border: solid #03fcf0  2px;
+        color: #03fcf0;
+        margin-right: 20px;
+    }
+    .twin-button2{
+        width: 200px;border: solid #03fcf0  2px;
+        background-color: #03fcf0;
+        color: white;
+        margin-left: 20px;
+    }
+    .woman-kiss-dog{
+        height: 100%; 
+        width: 100%; 
+        object-fit: contain
+    }
+    .royal-canin-img{
+        width: 200px;
+        height: 300px;
+    }
+    .partner-img{
+        widows: 100px;
+        height: 100px;
+    }
+    .animal-img-div{
+        display: flex; 
+        margin-bottom: 70px
+    }
+    .animal-img{
+
+    }
