--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,10 @@
+// .im {
+//      position: absolute;
+//     left: 50px;
+//     top: 10px;
+//     z-index: -1;
+//   }
+
 * {
     box-sizing: border-box;
     font-family: "Times New Roman", Times, serif;
@@ -11,50 +18,28 @@
   
   [class*="col-"] {
     // float: left;
-    padding: 15px;
+    // padding: 15px;
   }
-  
-//   html {
-//     font-family: "Lucida Sans", sans-serif;
-//   }
   
   .header {
     background-color: #9933cc;
     color: #ffffff;
     padding: 5px;
   }
-  
-//   .menu ul {
-//     list-style-type: none;
-//     margin: 0;
-//     padding: 0;
-//   }
-  
-//   .menu li {
-//     padding: 8px;
-//     margin-bottom: 7px;
-//     background-color: #33b5e5;
-//     color: #ffffff;
-//     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-//   }
-  
-//   .menu li:hover {
-//     background-color: #0099cc;
-//   }
-  
-//   .aside {
-//     background-color: #33b5e5;
-//     padding: 15px;
-//     color: #ffffff;
-//     text-align: center;
-//     font-size: 14px;
-//     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-//   }
-  
-  .footer {
-    //  text-align: center;
-    // font-size: 12px;
-    // padding: 15px;
+  .dog-book{
+    background-color: lightgrey;
+    margin-bottom: 90px;
+    margin-top: 90px;
+    color: grey;
+    height: 250px;
+}
+  .example-full-width{
+      width: 450px;
+  }
+  .dog-img{
+      width: 300px;
+      height: 300px;
+      z-index: 2;
   }
   .footer1{
       background-color: lightgrey;
@@ -180,10 +165,5 @@
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
-    .dog-book{
-        background-color: lightgrey;
-        margin-bottom: 90px;
-        margin-top: 90px;
-        color: grey;
-    }
   }
+  
